# The-CompleRust-Programming-Reference-Guide-

./: .gitignore  Cargo.toml
Advanced_Concepts/block_expr/: Cargo.toml
Advanced_Concepts/block_expr/src/: main.rs
Advanced_Concepts/let_statements/src/: destructure_enum.rs  destructure_func_param.rs  destructure_struct.rs  let_ref_mut.rs  main.rs  match_ref.rs
Advanced_Concepts/loop_as_an_expression/: Cargo.toml
Advanced_Concepts/loop_as_an_expression/src/: loop_expr.rs  main.rs
Building_Web_Aplications_With_Rust/hyperurl/: Cargo.toml
Building_Web_Aplications_With_Rust/hyperurl/src/: main.rs  service.rs
Building_Web_Aplications_With_Rust/linksnap/: Cargo.toml
Building_Web_Aplications_With_Rust/linksnap/src/: main.rs  route_handlers.rs
Concurrency/thread_arc/src/: arc_mutex.rs  (+5 more)
Concurrency/thread_basics/: Cargo.toml
Lists/Linked_Lists/: Cargo.toml
Logging/env_logger_demo/: Cargo.toml
Logging/env_logger_demo/src/: main.rs
Logging/user_auth/: Cargo.toml
Metaprogramming/c_macros_rust/: Cargo.toml
Metaprogramming/into_map_demo/: Cargo.toml
Metaprogramming/macros/: Cargo.toml
Network_Programming_in_Rust/rudis_sync/: Cargo.toml
Unsafe_Rust_And_FFI/unsafe_functions_and_blocks/: Cargo.toml
collections/src/: arrays.rs  main.rs  tupels.rs  vectors.rs
functions_and_methods_on_types/src/: enum_methods.rs  enums.rs  main.rs  structs.rs
imgtool/: Cargo.toml
imgtool/src/: main.rs
modules/my_program/: Cargo.toml
src/: closure.rs  enums.rs  lib.rs  loops.rs  main.rs  structs.rs  word_counter.rs
structs/src/: main.rs
unit_test/src/: lib.rs
(+74 files in other folders)
