[package]
name = "hyperurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
hyper = { version = "0.14.22", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
rust-crypto = "0.2.36"
serde = "1.0.147"
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
