[package]
name = "linksnap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
bytes = "1.2.1"
chrono = "0.4.22"
env_logger = "0.9.1"
futures = "0.3.25"
log = "0.4.17"
serde = { version = "1.0.147", features = ["std", "derive", "serde_derive"] }
serde_json = "1.0.87"
url = "2.3.1"
