[package]
name = "env_logger_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
user_auth = {path = "../user_auth"}
log = { version = "0.4.17", features = ["release_max_level_error", "max_level_debug"] }
